--- a/src/views/RegisterView.module.css
+++ b/src/views/RegisterView.module.css
@@ -9,10 +9,23 @@
     background: linear-gradient(to top, rgba(0, 0, 0, 0.6)50%, rgba(0, 0, 0, 0.6)50%), url(mviebackground.jpg);
 }
 
+.genrecontainer {
+    position: relative;
+    justify-self: left;
+    top: 100px;
+    margin-left: 30px;
+    width: 100%;
+    max-width: 400px;
+    background-color: rgb(39, 39, 39);
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+}
+
 .logincontainer {
     position: relative;
     justify-self: right;
-    top: 100px;
+    bottom: 520px;
     margin-right: 30px;
     width: 100%;
     max-width: 800px;
@@ -23,10 +36,24 @@
     text-align: center;
 }
 
+.genreselect h2,
 .formcontainer h2 {
     font-size: 2em;
     margin-bottom: 20px;
     color: #c7c6c6;
+    text-align: center;
+}
+
+.genreselect {
+    padding-left: 30px;
+    text-align: left;
+}
+
+.genreselect label {
+    text-align: center;
+    font-size: 1em;
+    line-height: 3;
+    color: #b3b3b3;
 }
 
 .formcontainer label {
@@ -36,6 +63,7 @@
     font-size: 0.9em;
     color: #b3b3b3;
 }
+
 .formcontainer input[type="text"],
 .formcontainer input[type="email"],
 .formcontainer input[type="password"] {
