--- a/src/views/GenreLogin.module.css
+++ b/src/views/GenreLogin.module.css
@@ -19,6 +19,7 @@
     gap: 20px;
     margin-left: 220px;
     padding: 30px;
+    padding-top: 40px;
     background-color: rgb(58, 58, 58);
 }
 
@@ -29,6 +30,7 @@
     transition: transform 0.3s ease;
     cursor: pointer;
     display: flex;
+    padding-bottom: 4px;
     flex-direction: column;
     align-items: center;
     text-align: center;
@@ -48,8 +50,17 @@
 
 .dbutton {
     text-decoration: none;
-    color: #000000;
+    color: #fff; 
+    background-color: rgb(32, 32, 32); 
+    padding: 6px 12px; 
+    border-radius: 4px;
+    display: inline-block;
+    margin-right: 10px; 
+    font-weight: bold;
+    text-align: center; 
+    font-size: 1rem; 
 }
+
 .pageturner {
     color: white;
     font-family: Arial, sans-serif;
@@ -58,18 +69,53 @@
     text-align: center;
     border-radius: 8px;
 }
+
 .pageturner a,
-.pageturner p{
+.pageturner p {
     width: 100%;
     margin-top: 15px;
     font-size: 1.2rem;
     letter-spacing: 0.5px;
 }
-.pageturner a:hover{
+
+.pageturner a:hover {
     color: #555;
     cursor: pointer;
     border-radius: 8px;
 }
-.spacer{
+
+.spacer {
     height: 1700px;
+}
+
+.buybut {
+    padding: 6px 12px; 
+    background-color: rgb(32, 32, 32);
+    color: #fff;
+    border-radius: 4px;
+    font-weight: bold;
+    cursor: pointer;
+    text-align: center;
+    font-size: 1rem; 
+}
+
+
+.moviecard .button-container {
+    display: flex;
+    justify-content: center;
+    gap: 10px; 
+    margin-top: 10px; 
+}
+
+.welcome {
+    position: absolute; 
+    top: 45px; /* adjust if needed */
+    left: 50%; 
+    transform: translateX(-50%); 
+    color: white;
+    font-size: 1.2rem; 
+    font-weight: bold; 
+    text-align: center; 
+    padding: 10px 20px;
+    z-index: 10;
 }
